force-app/src/objects/c2g__codaBudget__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbudgetdef</customHelpPage>
    <description>Stores the details of budget and balance records that enable you to track the variance of actual period balances against budget.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ActualPeriod001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualPeriod002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualPeriod003__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualPeriodDual001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualPeriodDual002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualPeriodDual003__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualYTDPeriod001__c</fullName>
        <formula>c2g__BroughtForwardActual__c + c2g__ActualPeriod001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualYTDPeriod002__c</fullName>
        <formula>c2g__ActualYTDPeriod001__c + c2g__ActualPeriod002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualYTDPeriod003__c</fullName>
        <formula>c2g__ActualYTDPeriod002__c + c2g__ActualPeriod003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualYTDPeriodDual001__c</fullName>
        <formula>c2g__BroughtForwardActualDual__c + c2g__ActualPeriodDual001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualYTDPeriodDual002__c</fullName>
        <formula>c2g__ActualYTDPeriodDual001__c + c2g__ActualPeriodDual002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ActualYTDPeriodDual003__c</fullName>
        <formula>c2g__ActualYTDPeriodDual002__c + c2g__ActualPeriodDual003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BroughtForwardActualDual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brought Forward Actual Dual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BroughtForwardActual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brought Forward Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BroughtForwardBudgetDual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brought Forward Budget Dual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BroughtForwardBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brought Forward Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetPeriod001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetPeriod002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetPeriod003__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetPeriodDual001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetPeriodDual002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetPeriodDual003__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetYTDPeriod001__c</fullName>
        <formula>c2g__BroughtForwardBudget__c + c2g__BudgetPeriod001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetYTDPeriod002__c</fullName>
        <formula>c2g__BudgetYTDPeriod001__c + c2g__BudgetPeriod002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetYTDPeriod003__c</fullName>
        <formula>c2g__BudgetYTDPeriod002__c + c2g__BudgetPeriod003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetYTDPeriodDual001__c</fullName>
        <formula>c2g__BroughtForwardBudgetDual__c + c2g__BudgetPeriodDual001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetYTDPeriodDual002__c</fullName>
        <formula>c2g__BudgetYTDPeriodDual001__c + c2g__BudgetPeriodDual002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetYTDPeriodDual003__c</fullName>
        <formula>c2g__BudgetYTDPeriodDual002__c + c2g__BudgetPeriodDual003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HashCode__c</fullName>
        <externalId>true</externalId>
        <label>Hash Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__IntersectDefinition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Intersect Definition</label>
        <referenceTo>c2g__codaIntersectDefinition__c</referenceTo>
        <relationshipLabel>Budgets and Balances</relationshipLabel>
        <relationshipName>BudgetsAndBalances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Budgets Local GLA</relationshipLabel>
        <relationshipName>BudgetsLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__NumberPeriodUpdate__c</fullName>
        <label>DEPRECATED: Number Period Update</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingBalanceTimestamp__c</fullName>
        <label>Reporting Balance Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__TLICountPeriod000__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TLI Count Period 000</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TLICountPeriod001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TLI Count Period 001</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TLICountPeriod002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TLI Count Period 002</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionsExistPeriod000__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEPRECATED:Transactions Exist Period 000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionsExistPeriod001__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEPRECATED:Transactions Exist Period 001</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionsExistPeriod002__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEPRECATED:Transactions Exist Period 002</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VariancePeriod001__c</fullName>
        <formula>c2g__ActualPeriod001__c - c2g__BudgetPeriod001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VariancePeriod002__c</fullName>
        <formula>c2g__ActualPeriod002__c - c2g__BudgetPeriod002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VariancePeriod003__c</fullName>
        <formula>c2g__ActualPeriod003__c - c2g__BudgetPeriod003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VariancePeriodDual001__c</fullName>
        <formula>c2g__ActualPeriodDual001__c - c2g__BudgetPeriodDual001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VariancePeriodDual002__c</fullName>
        <formula>c2g__ActualPeriodDual002__c - c2g__BudgetPeriodDual002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VariancePeriodDual003__c</fullName>
        <formula>c2g__ActualPeriodDual003__c - c2g__BudgetPeriodDual003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VarianceYTDPeriod001__c</fullName>
        <formula>c2g__ActualYTDPeriod001__c - c2g__BudgetYTDPeriod001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VarianceYTDPeriod002__c</fullName>
        <formula>c2g__ActualYTDPeriod002__c - c2g__BudgetYTDPeriod002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VarianceYTDPeriod003__c</fullName>
        <formula>c2g__ActualYTDPeriod003__c - c2g__BudgetYTDPeriod003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VarianceYTDPeriodDual001__c</fullName>
        <formula>c2g__ActualYTDPeriodDual001__c - c2g__BudgetYTDPeriodDual001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VarianceYTDPeriodDual002__c</fullName>
        <formula>c2g__ActualYTDPeriodDual002__c - c2g__BudgetYTDPeriodDual002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VarianceYTDPeriodDual003__c</fullName>
        <formula>c2g__ActualYTDPeriodDual003__c - c2g__BudgetYTDPeriodDual003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Year</label>
        <referenceTo>c2g__codaYear__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Budget and Balance</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaBudget</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaBudget</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__IntersectDefinition__c</columns>
        <columns>c2g__Year__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__LocalGLA__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__Product__c</columns>
        <columns>c2g__TaxCode__c</columns>
        <columns>c2g__Dimension1__c</columns>
        <columns>c2g__Dimension2__c</columns>
        <columns>c2g__Dimension3__c</columns>
        <columns>c2g__Dimension4__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BUD{000000}</displayFormat>
        <label>Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets and Balances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>